fix: Fix imports, javadoc and use group controller endpoints
